# cch

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml  publish.yml
benches/: cch.rs  real_corpus.rs
docs/: customize-parallel-scaling.md
examples/: build_and_query.rs
oracle/: README.md
oracle/routingkit-cch/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md  build.rs  pyproject.toml
oracle/routingkit-cch/RoutingKit/include/routingkit/: nested_dissection.h
oracle/routingkit-cch/RoutingKit/src/: nested_dissection.cpp
oracle/routingkit-cch/src/: cch_bundle.cc  cch_bundle.h  lib.rs  many_to_many.rs  routingkit_cch_wrapper.cc  routingkit_cch_wrapper.h
oracle/routingkit-cch/tests/: cch_bundle.rs
src/: bundle.rs  customize.rs  graph.rs  lib.rs  order.rs  path.rs  query.rs  structure.rs  writer.rs
src/internal/: bitvec.rs  id_map.rs  mod.rs  permutation.rs
src/order/: mod.rs
src/order/nd/: flow.rs  fragment.rs  inertial.rs  mod.rs
tests/: equivalence.rs  load_struct.rs  oracle_smoke.rs
